# 2023_1pm_mo

./: readme.md  terminal_cmd.txt
advanced/lecture10/: CMakeLists.txt  main.cpp
advanced/lecture11/: main.cpp
advanced/lecture12/: CMakeLists.txt  main.cpp
advanced/lecture13/: CMakeLists.txt  Circle.cpp  Circle.hpp  main.cpp
advanced/lecture14/: CMakeLists.txt  main.cpp
advanced/lecture15/: main.cpp
advanced/lecture16/: CMakeLists.txt  main.cpp
advanced/lecture17_templates/: CMakeLists.txt  main.cpp
advanced/lecture18_inheritance/: CMakeLists.txt  main.cpp
advanced/lecture18_inheritance_practice/: main.cpp
advanced/lecture19_inheritance_practice/: CMakeLists.txt  input1.txt
advanced/lecture2/: main.cpp
advanced/lecture20_smart_pointers/: CMakeLists.txt  main.cpp
advanced/lecture21_static_and_applications/: CMakeLists.txt  Log.hpp  main.cpp
advanced/lecture22_exceptions/: CMakeLists.txt  main.cpp
advanced/lecture22_libs/: CMakeLists.txt  func.cpp  main.cpp
advanced/lecture23_libs/: func.hpp
advanced/lecture24_libs2/: CMakeLists.txt  func.cpp  func.hpp
advanced/lecture24_libs2/MyLib/app/: main.cpp
advanced/lecture24_libs2/MyLib/include/: func.hpp  math.hpp
advanced/lecture24_libs2/MyLib/src/: func.cpp
advanced/lecture24_libs_example/: CMakeLists.txt  app.cpp
advanced/lecture24_libs_example/ext/MyLib/lib/Release/: MyStaticLib.lib
advanced/lecture24_libs_example/ext/MyLib/src/: math.cpp
advanced/lecture25_opencv/: CMakeLists.txt  app.cpp
advanced/lecture3/: main.cpp
advanced/lecture5/: main.cpp
advanced/lecture6/: main.cpp
advanced/lecture7/: .gitignore  CMakeLists.txt  README.md  main.cpp
advanced/lecture7/inc/: functions.hpp  test.hpp
advanced/lecture7/src/: functions.cpp
advanced/lecture8/: CMakeLists.txt  main.cpp
basic/lecture10_strings/: input.txt  mystring.cpp  mystring.hpp  test.cpp
basic/lecture11_pointers/: pointers.cpp
basic/lecture12/: pointers.cpp
basic/lecture13/: CMakeLists.txt  main.cpp
basic/lecture13/inc/: func.hpp
basic/lecture13/src/: func.cpp
basic/lecture14_intro_oop/: CMakeLists.txt  main.cpp
basic/lecture15_intro_oop/: CMakeLists.txt  main.cpp
basic/lecture15_intro_oop/inc/: Circle.hpp
basic/lecture15_intro_oop/src/: Circle.cpp
basic/lecture16_sfml/: main.cpp
basic/lecture16_sfml/inc/: Circle.hpp  Game.hpp
basic/lecture17_sfml_2/: CMakeLists.txt
basic/lecture17_sfml_2/inc/: Circle.hpp  Game.hpp
basic/lecture18_sfml_textures/: CMakeLists.txt  main.cpp
basic/lecture18_sfml_textures/inc/: Game.hpp  Ship.hpp
basic/lecture19_collision/: main.cpp
basic/lecture19_collision/inc/: Circle.hpp  Game.hpp
basic/lecture2/: main.cpp
basic/lecture20/: README.md
basic/lecture20/inc/: Circle.hpp  Game.hpp  Ship.hpp
basic/lecture21_bullet/: .gitignore  CMakeLists.txt  main.cpp
basic/lecture21_bullet/inc/: Bullet.hpp  Game.hpp
basic/lecture22/: CMakeLists.txt
basic/lecture22/inc/: Destroyer.hpp  Game.hpp  Ship.hpp  SpaceObject.hpp  UFO.hpp
basic/lecture23_template/: CMakeLists.txt  main.cpp
basic/lecture24_operator_overloading/: main.cpp
basic/lecture3/: main.cpp
basic/lecture4/: main.cpp
basic/lecture5/: main.cpp
basic/lecture6_hometasks/: main.cpp
basic/lecture7_functions/: functions.cpp  functions.hpp  main.cpp
basic/lecture_8_strings/: test.cpp
practice/: 1ПМ_АДМО_ФИО_Дневник_уч_практика.docx  1ПМ_АДМО_ФИО_Отчет_уч_практика.docx  1ПМ_ИП_ФИО_Дневник_уч_практика.docx  1ПМ_ИП_ФИО_Отчет_уч_практика.docx  2ПМ_АДМО_ФИО_Дневник_уч_практика.docx  2ПМ_АДМО_ФИО_Отчет_уч_практика.docx  2ПМ_ИП_ФИО_Дневник_уч_практика.docx  2ПМ_ИП_ФИО_Отчет_уч_практика.docx  Правила оформления.docx
